--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -5,6 +5,13 @@
 
 {% block content_content %}
 
+    <div class="row"></div>
+    <div class="row">
+        <div class="col-md-12">
+
+        </div>
+    </div>
+
 {% endblock content_content %}
 
 {% block content_sidebar %}
@@ -19,6 +26,7 @@
             <label>Etxebizitza Zenbakia <span id="txtBizilekuZenbakia"></span></label>
         </div>
     </div>
+
 
 
 
