--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -8,7 +8,7 @@
     <div class="row"></div>
     <div class="row">
         <div class="col-md-12">
-
+            {{ render(controller('AppBundle:Arreta:new')) }}
         </div>
     </div>
 
