Kanala gehitu radiobutton

--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -105,7 +105,7 @@
         </div>
     {#</div>#}
 
-    <input id="txtLocale" type="text" value="{{ app.request.locale }}">
+    <input id="txtLocale" type="hidden" value="{{ app.request.locale }}">
 
 {% endblock content_content %}
 
