--- a/app/Resources/views/arreta/new.html.twig
+++ b/app/Resources/views/arreta/new.html.twig
@@ -2,6 +2,14 @@
 {{ form_start(form) }}
 
     <div class="form-group">
+        {{ form_label(form.kanala) }}
+        <div class="col-sm-10">
+            {{ form_widget(form.kanala) }}
+        </div>
+        {{ form_errors(form.kanala) }}
+    </div>
+
+    <div class="form-group">
         {{ form_label(form.remitente) }}
         <div class="col-sm-10">
             {{ form_widget(form.remitente) }}
