--- a/app/Resources/views/arreta/edit.html.twig
+++ b/app/Resources/views/arreta/edit.html.twig
@@ -1,21 +1,146 @@
 {% extends 'base.html.twig' %}
 
-{% block body %}
-    <h1>Arretum edit</h1>
+{% block page_header %}
+    <div class="row">
+        <div class="col-md-1"><a class="btn btn-success" href="{{ path('admin_arreta_new') }}">Arreta berria</a></div>
+        <div class="col-md-10"></div>
+        <div class="col-md-1"><a id="btnArretaGorde" class="btn btn-primary" href="javascript:void(0);">Gorde</a></div>
+    </div>
+    <div class="row">&nbsp;</div>
+{% endblock page_header %}
 
-    {{ form_start(edit_form) }}
-        {{ form_widget(edit_form) }}
-        <input type="submit" value="Edit" />
-    {{ form_end(edit_form) }}
+{% block content_content %}
 
-    <ul>
-        <li>
-            <a href="{{ path('admin_arreta_index') }}">Back to the list</a>
-        </li>
-        <li>
-            {{ form_start(delete_form) }}
-                <input type="submit" value="Delete">
-            {{ form_end(delete_form) }}
-        </li>
-    </ul>
+<!-- Nav tabs -->
+<ul class="nav nav-tabs" role="tablist">
+    <li role="presentation" class="active"><a href="#datuak" aria-controls="home" role="tab" data-toggle="tab">Datos</a></li>
+    <li role="presentation"><a href="#tramites" aria-controls="profile" role="tab" data-toggle="tab">Tramites</a></li>
+</ul>
+
+<!-- Tab panes -->
+<div class="tab-content">
+
+    {#Datos Tab#}
+    <div role="tabpanel" class="tab-pane active" id="datuak">
+        <div class="row">&nbsp;</div>
+        <div class="row">
+            <div class="col-md-12">
+
+                {{ form_start(edit_form) }}
+
+                <div class="form-group">
+                    {{ form_label(edit_form.kanala) }}
+                    <div class="col-sm-10">
+                        {{ form_widget(edit_form.kanala) }}
+                    </div>
+                    {{ form_errors(edit_form.kanala) }}
+                </div>
+
+                <div class="form-group">
+                    {{ form_label(edit_form.remitente) }}
+                    <div class="col-sm-10">
+                        {{ form_widget(edit_form.remitente) }}
+                    </div>
+                    {{ form_errors(edit_form.remitente) }}
+                </div>
+
+                <div class="form-group">
+                    {{ form_label(edit_form.genero) }}
+                    <div class="col-sm-10">
+                        {{ form_widget(edit_form.genero) }}
+                    </div>
+                    {{ form_errors(edit_form.genero) }}
+                </div>
+
+                <div class="form-group">
+                    {{ form_label(edit_form.adina) }}
+                    <div class="col-sm-10">
+                        {{ form_widget(edit_form.adina) }}
+                    </div>
+                    {{ form_errors(edit_form.adina) }}
+                </div>
+
+                <div class="form-group">
+                    {{ form_label(edit_form.nazionalitatea) }}
+                    <div class="col-sm-10">
+                        {{ form_widget(edit_form.nazionalitatea) }}
+                    </div>
+                    {{ form_errors(edit_form.nazionalitatea) }}
+                </div>
+
+                <div class="form-group">
+                    {{ form_label(edit_form.hizkuntza) }}
+                    <div class="col-sm-10">
+                        {{ form_widget(edit_form.hizkuntza) }}
+                    </div>
+                    {{ form_errors(edit_form.hizkuntza) }}
+                </div>
+
+                <div class="form-group">
+                    {{ form_label(edit_form.barrutia) }}
+                    <div class="col-sm-10">
+                        {{ form_widget(edit_form.barrutia) }}
+                    </div>
+                    {{ form_errors(edit_form.barrutia) }}
+                </div>
+
+                <div class="form-group">
+                    {{ form_label(edit_form.administrazioa) }}
+                    <div class="col-sm-10">
+                        {{ form_widget(edit_form.administrazioa) }}
+                    </div>
+                    {{ form_errors(edit_form.administrazioa) }}
+                </div>
+
+                <div class="hidden">
+                    {{ form_row(edit_form.user) }}
+                    {{ form_row(edit_form.fetxa) }}
+                    {{ form_row(edit_form.nan) }}
+
+                </div>
+
+                {{ form_end(edit_form) }}
+            </div>
+        </div>
+    </div>
+
+    {#Tramites Tab#}
+    <div role="tabpanel" class="tab-pane" id="tramites">
+        <div class="row">&nbsp;</div>
+        <div class="row">
+            <div class="col-md-1"></div>
+            <div class="col-md-10">
+                <div class="btn-group" role="group" aria-label="...">
+                    <button type="button" id="cmdZerbikat" class="btn btn-primary">Zerbikat</button>
+                    <button type="button" id="cmdGerkud" class="btn btn-primary">Gerkud</button>
+                    <button type="button" id="cmdInformacion" class="btn btn-primary">{{ "Información" | trans }}</button>
+                </div>
+            </div>
+            <div class="col-md-1"></div>
+        </div>
+        <div class="row">&nbsp;</div>
+        <div class="row">
+            <div class="col-md-1"></div>
+            <div class="col-md-10">
+                <table class="table table-bordered table-hover table-striped">
+                    <thead>
+                    <tr>
+                        <th>Nº</th>
+                        <th>Tramite</th>
+                        <th>Resultado</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+
+                    </tbody>
+                </table>
+            </div>
+            <div class="col-md-1"></div>
+        </div>
+    </div>
+
+    {{ render(controller('AppBundle:Tramite:new', {'arretaid': arreta.id})) }}
+
+</div>
+
 {% endblock %}
