--- a/app/Resources/views/tramite/new.html.twig
+++ b/app/Resources/views/tramite/new.html.twig
@@ -1,7 +1,6 @@
 
 
-{{ form_start(form) }}
+{{ form_start(form, {'attr': {'id': 'frmTramiteNew'}}) }}
     {{ form_widget(form) }}
-    <input type="submit" value="Create" />
 {{ form_end(form) }}
 
