--- a/app/Resources/views/result/index.html.twig
+++ b/app/Resources/views/result/index.html.twig
@@ -1,45 +1,49 @@
 {% extends 'base.html.twig' %}
 
-{% block body %}
-    <h1>Results list</h1>
+{% block headline %}
+    Emaitzen kudeaketa
+{% endblock headline %}
 
-    <table>
-        <thead>
+{% block subheadline %}
+    <div class="page-header">
+        <ul class="list-inline">
+            <li>
+                <a class="btn btn-primary" href="{{ path('admin_result_new') }}"><i class="fa fa-plus-square" aria-hidden="true"></i> Berria</a>
+            </li>
+        </ul>
+    </div>
+{% endblock subheadline %}
+
+
+{% block content %}
+
+    <div class="col-sm-12">
+        <table class="table table-condensed table-hover table-striped">
+            <thead>
             <tr>
                 <th>Id</th>
-                <th>Name</th>
-                <th>Created</th>
-                <th>Updated</th>
-                <th>Contentchangedby</th>
-                <th>Actions</th>
+                <th>Izena (eus)</th>
+                <th>Izena (cas)</th>
+                <th></th>
             </tr>
-        </thead>
-        <tbody>
-        {% for result in results %}
-            <tr>
-                <td><a href="{{ path('admin_result_show', { 'id': result.id }) }}">{{ result.id }}</a></td>
-                <td>{{ result.name }}</td>
-                <td>{% if result.created %}{{ result.created|date('Y-m-d H:i:s') }}{% endif %}</td>
-                <td>{% if result.updated %}{{ result.updated|date('Y-m-d H:i:s') }}{% endif %}</td>
-                <td>{{ result.contentChangedBy }}</td>
-                <td>
-                    <ul>
-                        <li>
-                            <a href="{{ path('admin_result_show', { 'id': result.id }) }}">show</a>
-                        </li>
-                        <li>
-                            <a href="{{ path('admin_result_edit', { 'id': result.id }) }}">edit</a>
-                        </li>
-                    </ul>
-                </td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
+            </thead>
+            <tbody>
+            {% for result in results %}
+                <tr>
+                    <td><a href="{{ path('admin_result_edit', { 'id': result.id }) }}">{{ result.id }}</a></td>
+                    <td>{{ result.name }}</td>
+                    <td>{{ result.namees }}</td>
+                    <td>
+                        <ul class="list-inline">
+                            <li>
+                                <a href="{{ path('admin_result_edit', { 'id': result.id }) }}"><i class="fa fa-pencil" aria-hidden="true"></i> Aldatu</a>
+                            </li>
+                        </ul>
+                    </td>
+                </tr>
+            {% endfor %}
+            </tbody>
+        </table>
+    </div>
 
-    <ul>
-        <li>
-            <a href="{{ path('admin_result_new') }}">Create a new result</a>
-        </li>
-    </ul>
 {% endblock %}
