--- a/app/Resources/views/result/new.html.twig
+++ b/app/Resources/views/result/new.html.twig
@@ -1,16 +1,38 @@
 {% extends 'base.html.twig' %}
 
-{% block body %}
-    <h1>Result creation</h1>
+{% block headline %}
+    Emaitzen kudeaketa
+{% endblock headline %}
 
-    {{ form_start(form) }}
-        {{ form_widget(form) }}
-        <input type="submit" value="Create" />
+{% block subheadline %}
+    <div class="page-header">
+        <ul class="list-inline">
+            <li>
+                <a class="btn btn-primary" href="{{ path('admin_result_index') }}"><i class="fa fa-arrow-left" aria-hidden="true"></i> Itzuli</a>
+                <a id="btnSave" class="btn btn-primary" href="javascript:void(0);"><i class="fa fa-floppy-o" aria-hidden="true"></i> Gorde </a>
+            </li>
+        </ul>
+    </div>
+{% endblock subheadline %}
+
+{% block content %}
+
+<div class="col-sm-12">
+    {{ form_start(form, {'attr': {'id': 'frmNew'}}) }}
+    {{ form_widget(form) }}
     {{ form_end(form) }}
+</div>
 
-    <ul>
-        <li>
-            <a href="{{ path('admin_result_index') }}">Back to the list</a>
-        </li>
-    </ul>
+{% endblock %}
+
+{% block foot_script %}
+    {{ parent() }}
+
+    <script>
+        $(document).ready(function () {
+            $('#btnSave').on('click', function () {
+                $("#frmNew").submit();
+            })
+        });
+    </script>
 {% endblock %}
