--- a/app/Resources/views/mota/edit.html.twig
+++ b/app/Resources/views/mota/edit.html.twig
@@ -1,21 +1,38 @@
 {% extends 'base.html.twig' %}
 
-{% block body %}
-    <h1>Motum edit</h1>
+{% block headline %}
+    Tramite moten kudeaketa
+{% endblock headline %}
 
-    {{ form_start(edit_form) }}
+{% block subheadline %}
+    <div class="page-header">
+        <ul class="list-inline">
+            <li>
+                <a class="btn btn-primary" href="{{ path('admin_mota_index') }}"><i class="fa fa-arrow-left" aria-hidden="true"></i> Itzuli</a>
+                <a id="btnSave" class="btn btn-primary" href="javascript:void(0);"><i class="fa fa-floppy-o" aria-hidden="true"></i> Gorde </a>
+            </li>
+        </ul>
+    </div>
+{% endblock subheadline %}
+
+{% block content %}
+
+    <div class="col-sm-12">
+        {{ form_start(edit_form, {'attr': {'id': 'frmNew'}}) }}
         {{ form_widget(edit_form) }}
-        <input type="submit" value="Edit" />
-    {{ form_end(edit_form) }}
+        {{ form_end(edit_form) }}
+    </div>
 
-    <ul>
-        <li>
-            <a href="{{ path('admin_mota_index') }}">Back to the list</a>
-        </li>
-        <li>
-            {{ form_start(delete_form) }}
-                <input type="submit" value="Delete">
-            {{ form_end(delete_form) }}
-        </li>
-    </ul>
+{% endblock %}
+
+{% block foot_script %}
+    {{ parent() }}
+
+    <script>
+        $(document).ready(function () {
+            $('#btnSave').on('click', function () {
+                $("#frmNew").submit();
+            })
+        });
+    </script>
 {% endblock %}
